--- a/index.html
+++ b/index.html
@@ -4,8 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="parent">
+    <header class="header">
+     <div>
+        <h1 class="logo">STYLES <br> CONFERENCE</h1>
+      <h2 class="date">August 24-26 - Chicago, IL</h2>
+      <nav class="nav">
+        <ul class="li">
+        <li class="link">
+          <a href="home.html">Home</a>
+        </li>
+        <li class="link">
+          <a href="venue.html">Venue</a>
+        </li>
+        <li class="link">
+          <a href="register.html">Register</a>
+        </li>
+        </ul>
+      </nav>
+      </div>
+    </header>
     
+    <main>
+      <section class="section1">
+     <h4 class="dedicate">Dedicated to the Craft of Building Websites </h4>
+     <p>Every year the brightest web designers and front-end developers descend on <br>Chicago to discuss the latest tech logies. Join us this August!</p> 
+      </section>
+    <button class="button">
+      REGISTER NOW
+    </button>
+
+    <div class="homebody">
+   <section class="speakers">
+     <h4>SPEAKERS</h4> 
+      <img src="speakers.jpg" alt="professional speaker">
+    <h4>  World-Class Speakers </h4>
+    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+  </section>
+
+  <section class="schedule">
+    <h4>SCHEDULE</h4>
+    <img src="scheduleimg.jpg" alt="Schedule">
+    <h4>Three Inspiring Days</h4>
+   <p> Enjoy three inspiring and action-packed days of tals, gatherings, and all-around good times.</p>
+  </section>
+
+  <section class="venue"> 
+   <h4> VENUE </h4>
+    <img src="venue.jpg" alt="Venue">
+    <h4>The Chicago Theatre</h4>
+   <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p> 
+  </section>
+</div>
+
+    </main>
+
+    <footer class="footer">
+       <small> &copy; Styles Conference </small> 
+        <nav class="link">
+        <ul>
+        <li>
+          <a href="home.html">Home</a>
+        </li>
+        <li>
+          <a href="venue.html">Venue</a>
+        </li>
+        <li>
+          <a href="register.html">Register</a>
+        </li>
+        </ul>
+      </nav>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
