--- a/index.html
+++ b/index.html
@@ -25,3 +25,19 @@
         </nav>
       
         </header>
+
+        <footer class="footer">
+          <p class="copy">&copy; Styles Conference</p>
+          <nav class="links">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Venue</a></li>
+            <li><a href="">Register</a></li>
+          </ul>
+        </nav>
+
+
+        </footer>
+<script src="script.js"></script>
+</body>
+</html>
