--- a/index.html
+++ b/index.html
@@ -23,6 +23,43 @@
             <li><a href="">Register</a></li>
           </ul>
         </nav>
+
+        <main class="main">
+
+          <div class="second">
+         <h1 class="reg"> Register </h1>
+         <p class="noted"> Every year we aim to have an unbelievable time, and this year we'd love it for you to 
+         join us. <br> Conference passes only cost $99, one of the best values you'll find.</p>
+        </div>
+         
+        <span class="mai" >
+          <h1 class="purchase"> Purchase a Conference Pass </h1>
+           <h4>$99 PER PASS</h4>
+         <p> Purchase your Styles Conference pass using the form to the right. Multiple passes may be purchased within the 
+           same order, so feel free to bring a friend or two along. 
+           Once your order is finished we’ll follow up and provide a 
+           receipt for your purchase. See you soon!</p>
+          <h2> Why Attend? </h2>
+          <ul>
+          <li> Over twenty world-class speakers </li>
+          <li> One full day of workshops and two full days of presentations </li>
+          <li> Hosted at The Chicago Theatre, a historical landmark </li>
+          <li> August in Chicago is simply amazing </li>
+        </ul>
+        </span>
+         <form action="">
+          <h5>Name</h5>
+          <input type="button" value="" placeholder="Full Name">
+          <h5>Email</h5>
+          <input type="button" value="" placeholder="Email address">
+          <h5>Number of Passes</h5>
+           <select name="" id=""></select>
+          <h5>Comments</h5>
+          <input type="button" value="" placeholder="comment">
+
+         </form>
+
+        </main>
       
         </header>
 
