--- a/index.html
+++ b/index.html
@@ -34,28 +34,31 @@
          
         <span class="mai" >
           <h1 class="purchase"> Purchase a Conference Pass </h1>
-           <h4>$99 PER PASS</h4>
-         <p> Purchase your Styles Conference pass using the form to the right. Multiple passes may be purchased within the 
-           same order, so feel free to bring a friend or two along. 
+           <h4 class="per">$99 PER PASS</h4>
+         <p class="paragra"> Purchase your Styles Conference pass using the form to the right. Multiple passes <br> may be purchased within the 
+           same order, so feel free to bring a friend or two along. <br>
            Once your order is finished we’ll follow up and provide a 
-           receipt for your purchase. See you soon!</p>
-          <h2> Why Attend? </h2>
+           receipt for your purchase. <br> See you soon!</p>
+          <h2 class="why"> Why Attend? </h2>
+          <nav class="move">
           <ul>
-          <li> Over twenty world-class speakers </li>
-          <li> One full day of workshops and two full days of presentations </li>
-          <li> Hosted at The Chicago Theatre, a historical landmark </li>
+          <li> Over twenty world-class speakers </li> <br>
+          <li> One full day of workshops and two full days of presentations <br> </li>
+          <li> Hosted at The Chicago Theatre, a historical landmark </li><br>
           <li> August in Chicago is simply amazing </li>
         </ul>
+      </nav>
         </span>
-         <form action="">
+         <form class="formbox" action="">
           <h5>Name</h5>
-          <input type="button" value="" placeholder="Full Name">
+          <input type="button" value="" class="input" placeholder="Full Name">
           <h5>Email</h5>
-          <input type="button" value="" placeholder="Email address">
+          <input type="button" value=""  class="input" placeholder="Email address">
           <h5>Number of Passes</h5>
-           <select name="" id=""></select>
+           <select  class="input, input3" name="" id=""></select>
           <h5>Comments</h5>
-          <input type="button" value="" placeholder="comment">
+          <input type="button"  class="input, input4" value="" placeholder="comment">
+          <button>PURCHASE</button>
 
          </form>
 
