--- a/index.html
+++ b/index.html
@@ -5,75 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="reset.css"> -->
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body class="parent">
     <header class="header">
-     <div>
-        <h1 class="logo">STYLES <br> CONFERENCE</h1>
+     <section>
+        <h1 class="logo"> <a href="home.html"> STYLES <br> CONFERENCE</a></h1>
       <h2 class="date">August 24-26 - Chicago, IL</h2>
       <nav class="nav">
         <ul class="li">
         <li class="link">
-          <a href="home.html">Home</a>
+          <a href="home.html">HOME</a>
         </li>
         <li class="link">
-          <a href="venue.html">Venue</a>
+          <a href="venue.html">VENUE</a>
         </li>
         <li class="link">
-          <a href="register.html">Register</a>
+          <a href="register.html">REGISTER</a>
         </li>
         </ul>
       </nav>
-      </div>
+    </section>
     </header>
     
     <main>
       <section class="section1">
-     <h4 class="dedicate">Dedicated to the Craft of Building Websites </h4>
-     <p>Every year the brightest web designers and front-end developers descend on <br>Chicago to discuss the latest tech logies. Join us this August!</p> 
+     <h2 class="dedicate">Dedicated to the Craft of Building Websites </h2>
+     <p class="p">Every year the brightest web designers and front-end developers descend on <br>Chicago to discuss the latest tech logies. Join us this August!</p> 
       </section>
     <button class="button">
       REGISTER NOW
     </button>
 
-    <div class="homebody">
-   <section class="speakers">
-     <h4>SPEAKERS</h4> 
-      <img src="speakers.jpg" alt="professional speaker">
-    <h4>  World-Class Speakers </h4>
-    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-  </section>
+    <section class="homebody">
+      <section class="speakers">
+        <h5 class="h">SPEAKERS</h5> 
+          <img class="imgf" src="speakers.jpg" alt="professional speaker">
+        <h3 class="hh">  World-Class Speakers </h3>
+        <p class="pp">Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+      </section>
 
-  <section class="schedule">
-    <h4>SCHEDULE</h4>
-    <img src="scheduleimg.jpg" alt="Schedule">
-    <h4>Three Inspiring Days</h4>
-   <p> Enjoy three inspiring and action-packed days of tals, gatherings, and all-around good times.</p>
-  </section>
+      <section class="schedule">
+        <h5 class="h">SCHEDULE</h5>
+        <img class="imgf" src="scheduleimg.jpg" alt="Schedule">
+        <h3 class="hh">Three Inspiring Days</h3>
+      <p class="pp"> Enjoy three inspiring and action-packed days of tals, gatherings, and all-around good times.</p>
+      </section>
 
-  <section class="venue"> 
-   <h4> VENUE </h4>
-    <img src="venue.jpg" alt="Venue">
-    <h4>The Chicago Theatre</h4>
-   <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p> 
+      <section class="venue"> 
+      <h5 class="h"> VENUE </h5>
+        <img class="imgf" src="venue.jpg" alt="Venue">
+        <h3 class="hh">The Chicago Theatre</h3>
+      <p class="pp">Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p> 
+      </section>
   </section>
-</div>
-
     </main>
 
     <footer class="footer">
-       <small> &copy; Styles Conference </small> 
-        <nav class="link">
-        <ul>
-        <li>
+        <nav class="linkk">
+         <b class="copy">  &copy; Styles Conference</b> 
+        <ul class="li2"> 
+          <li class="link2">
           <a href="home.html">Home</a>
         </li>
-        <li>
+        <li class="link2">
           <a href="venue.html">Venue</a>
         </li>
-        <li>
+        <li class="link2">
           <a href="register.html">Register</a>
         </li>
         </ul>
