modified home page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body class="parent">
     <header class="header">
      <section>
-        <h1 class="logo"> <a href="home.html"> STYLES <br> CONFERENCE</a></h1>
+        <h1 class="logo"> <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html"> STYLES <br> CONFERENCE</a></h1>
       <h2 class="date">August 24-26 - Chicago, IL</h2>
       <nav class="nav">
         <ul class="li">
         <li class="link">
-          <a href="home.html">HOME</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a>
         </li>
         <li class="link">
-          <a href="venue.html">VENUE</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a>
         </li>
         <li class="link">
-          <a href="register.html">REGISTER</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a>
         </li>
         </ul>
       </nav>
@@ -66,13 +66,13 @@
          <b class="copy">  &copy; Styles Conference</b> 
         <ul class="li2"> 
           <li class="link2">
-          <a href="home.html">Home</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a>
         </li>
         <li class="link2">
-          <a href="venue.html">Venue</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a>
         </li>
         <li class="link2">
-          <a href="register.html">Register</a>
+          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a>
         </li>
         </ul>
       </nav>
