modified home page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header class="header">
       
         <h1 class="conference">
-        <a href="">STYLES <br> CONFERENCE</a>
+        <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">STYLES <br> CONFERENCE</a>
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
          
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Venue</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
           </ul>
         </nav>
       </header>
@@ -70,9 +70,9 @@
           <p class="copy">&copy; Styles Conference</p>
           <nav class="links">
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Venue</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
           </ul>
         </nav>
 
