--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
      <h2 class="dedicate">Dedicated to the Craft of Building Websites </h2>
      <p class="p">Every year the brightest web designers and front-end developers descend on <br>Chicago to discuss the latest tech logies. Join us this August!</p> 
       </section>
-    <button class="button">
+     <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html"><button  class="button">
       REGISTER NOW
-    </button>
+    </button></a> 
 
     <section class="homebody">
       <section class="speakers">
@@ -55,7 +55,7 @@
       <section class="venue"> 
       <h5 class="h"> VENUE </h5>
         <img class="imgf" src="venue.jpg" alt="Venue">
-        <h3 class="hh">The Chicago Theatre</h3>
+      <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html"><h3 class="hh">The Chicago Theatre</h3></a>  
       <p class="pp">Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p> 
       </section>
   </section>
