modified register branch

--- a/index.html
+++ b/index.html
@@ -11,23 +11,15 @@
 <body>
 
     <header class="header">
-      
         <h1 class="conference">
         <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">STYLES <br> CONFERENCE</a>
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
-         
-          <ul>
-<<<<<<< HEAD
-            <li><a href="">HOME</a></li>
-            <li><a href="">VENUE</a></li>
-            <li><a href="">REGISTER</a></li>
-=======
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
->>>>>>> 9422299cf3e69cb6676784bef86b869ed67e47d0
+            <ul>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a></li>
           </ul>
         </nav>
       </header>
@@ -50,7 +42,7 @@
           <nav class="move">
           <ul>
           <li> Over twenty world-class speakers </li> <br>
-          <li> One full day of workshops and two full days of presentations <br> </li>
+          <li> One full day of workshops and two full days of presentations</li><br>
           <li> Hosted at The Chicago Theatre, a historical landmark </li><br>
           <li> August in Chicago is simply amazing </li>
         </ul>
