--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
-         
-          <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
+            <ul>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a></li>
           </ul>
         </nav>
       </header>
