--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <nav class="listbars">
          
           <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
-          </ul>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
+            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER
         </nav>
       </header>
         <main class="main">
