--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       </nav>
         </span>
 
-         <form class="formbox" action="">
-          <h5>Name</h5>
-          <input type="name" value="" id="fullName" class="input" placeholder="Full Name">
-          <h5>Email</h5>
-          <input type="email" value="" id="emailAddress"  class="input" placeholder="Email address">
-          <h5>Number of Passes</h5>
-           <select class="input, input3" name="" id="numberOfPasses">
+         <form class="formbox">
+          <h5 class="title">Name</h5>
+          <input id="fullName" class="input" type="text" name="name" placeholder="Full Name" required>
+          <h5 class="title">Email</h5>
+          <input id="email" class="input" type="email" name="email" placeholder="Email Address" required>
+          <h5 class="title">Number of Passes</h5>
+           <select class="numberOfPasses">
              <option value="1" selected>1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -63,11 +63,10 @@
              <option value="5">5</option>
            </select>
           <h5>Comments</h5>
-          <textarea name="input" class="input, input4" ></textarea>
+          <textarea class="comments" name="comments" ></textarea>
           <button class="purchasebut">PURCHASE</button>
          </form>
         </main>
-      
          <footer class="footer">
           <p class="copy">&copy; Styles Conference</p>
           <nav class="links">
