--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h5 class="title">Email</h5>
           <input id="email" class="input" type="email" name="email" placeholder="Email Address" required>
           <h5 class="title">Number of Passes</h5>
-           <select class="numberOfPasses, input, input3">
+           <select class="numberOfPasses">
              <option value="1" selected>1</option>
              <option value="2">2</option>
              <option value="3">3</option>
@@ -63,7 +63,7 @@
              <option value="5">5</option>
            </select>
           <h5>Comments</h5>
-          <textarea class="comments, input, input4" name="comments" ></textarea>
+          <textarea class="comments" name="comments"></textarea>
           <button class="purchasebut">PURCHASE</button>
          </form>
 
