--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           <span class="map1">
             <h2 class="chicago">Chicago Theatre</h2>
             <p class="state">175 N State St <br> Chicago, IL 60601 
-              <br> thechicagotheatre.com <br>(312) 462-6300  </p>
+              <br> <br> <br> <br>thechicagotheatre.com <br>(312) 462-6300  </p>
               
             <iframe class="mapp2 map30" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606"></iframe>
           </span>
 
           <span>
             <h2 class="four">Four Seasons</h2>
-            <p class="five">120 E Delaware PI <br>Chicago, IL 60611 <br> fourseasons.com <br> (312) 280-8800</p>
+            <p class="five">120 E Delaware PI <br>Chicago, IL 60611 <br> <br> <br> <br> fourseasons.com <br> (312) 280-8800</p>
                          
               <iframe class="mapp2 map20" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJfaT9dlTTD4gR4Gda1tssAao&key=AIzaSyAeTEJ75nZTKQSN8HhKAzBNJzLGYKTPAJU"></iframe>
           </span>
