--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="home.css">
 </head>
 <body class="parent">
     <header class="header">
@@ -15,13 +15,13 @@
       <nav class="nav">
         <ul class="li">
         <li class="link">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a>
+          <a href="./home.html">HOME</a>
         </li>
         <li class="link">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a>
+          <a href="./venue.html">VENUE</a>
         </li>
         <li class="link">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a>
+          <a href="./register.html">REGISTER</a>
         </li>
         </ul>
       </nav>
@@ -66,13 +66,13 @@
          <b class="copy">  &copy; Styles Conference</b> 
         <ul class="li2"> 
           <li class="link2">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a>
+          <a href="./home.html">Home</a>
         </li>
         <li class="link2">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a>
+          <a href="./branch.html">Venue</a>
         </li>
         <li class="link2">
-          <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a>
+          <a href="./register.html">Register</a>
         </li>
         </ul>
       </nav>
