--- a/register.html
+++ b/register.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="registerreset.css">
 </head>
 <body>
 
@@ -17,9 +17,9 @@
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
             <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a></li>
+            <li><a href="./register.html">HOME</a></li>
+            <li><a href="./register.css">VENUE</a></li>
+            <li><a href="./register.js">REGISTER</a></li>
           </ul>
         </nav>
       </header>
