--- a/venue.html
+++ b/venue.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venue</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="venue.css">
+    <link rel="stylesheet" href="venuereset.css">
 </head>
 <body>
 
@@ -19,9 +19,9 @@
         <nav class="listbars">
          
           <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a></li>
+            <li><a href="./venue.html">HOME</a></li>
+            <li><a href="./venue.css">VENUE</a></li>
+            <li><a href="./venue.js">REGISTER</a></li>
           </ul>
         </nav>
       
@@ -55,9 +55,9 @@
           <p class="copy">&copy; Styles Conference</p>
           <nav class="links">
           <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">HOME</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">VENUE</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">REGISTER</a></li>
+            <li><a href="./venue.html">HOME</a></li>
+            <li><a href="./venue.css">VENUE</a></li>
+            <li><a href="./venue.js">REGISTER</a></li>
           </ul>
         </nav>
 
