--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body class="parent">
     <header class="header">
      <section>
-        <h1 class="logo"> <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html"> STYLES <br> CONFERENCE</a></h1>
+        <h1 class="logo"> <a href="./home.html"> STYLES <br> CONFERENCE</a></h1>
       <h2 class="date">August 24-26 - Chicago, IL</h2>
       <nav class="nav">
         <ul class="li">
