--- a/venue.html
+++ b/venue.html
@@ -13,7 +13,7 @@
     <header class="header">
       
         <h1 class="conference">
-        <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">STYLES <br> CONFERENCE</a>
+        <a href="./venue.html">STYLES <br> CONFERENCE</a>
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
