--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <h1 class="conference">
-        <a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">STYLES <br> CONFERENCE</a>
+        <a href="./register.html">STYLES <br> CONFERENCE</a>
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
