--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="home.css">
+   <link rel="stylesheet" href="./assets/stylesheet/home.css">
 </head>
 <body class="parent">
     <header class="header">
@@ -40,21 +40,21 @@
     <section class="homebody">
       <section class="speakers">
         <h5 class="h">SPEAKERS</h5> 
-          <img class="imgf" src="speakers.jpg" alt="professional speaker">
+          <img class="imgf" src="./assets/img/speakers.jpg" alt="professional speaker">
         <h3 class="hh">  World-Class Speakers </h3>
         <p class="pp">Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
       </section>
 
       <section class="schedule">
         <h5 class="h">SCHEDULE</h5>
-        <img class="imgf" src="scheduleimg.jpg" alt="Schedule">
+        <img class="imgf" src="./assets/img/scheduleimg.jpg" alt="Schedule">
         <h3 class="hh">Three Inspiring Days</h3>
       <p class="pp"> Enjoy three inspiring and action-packed days of tals, gatherings, and all-around good times.</p>
       </section>
 
       <section class="venue"> 
       <h5 class="h"> VENUE </h5>
-        <img class="imgf" src="venue.jpg" alt="Venue">
+        <img class="imgf" src="./assets/img/venue.jpg" alt="Venue">
         <h3 class="hh">The Chicago Theatre</h3>
         <p class="pp">Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p> 
       </section>
@@ -69,7 +69,7 @@
           <a href="./home.html">Home</a>
         </li>
         <li class="link2">
-          <a href="./branch.html">Venue</a>
+          <a href="./venue.html">Venue</a>
         </li>
         <li class="link2">
           <a href="./register.html">Register</a>
@@ -77,6 +77,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="script.js"></script>
+    <script src="./assets/js/home.js"></script>
 </body>
 </html>
