--- a/register.html
+++ b/register.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="register.css">
-    <link rel="stylesheet" href="registerreset.css">
+    <link rel="stylesheet" href="./assets/stylesheet/register.css">
+    <link rel="stylesheet" href="./assets/stylesheet/registerreset.css">
 </head>
 <body>
 
     <header class="header">
         <h1 class="conference">
-        <a href="./register.html">STYLES <br> CONFERENCE</a>
+        <a href="./home.html">STYLES <br> CONFERENCE</a>
         </h1>
         <h4 class="august">August 24–26th — Chicago, IL</h4>
         <nav class="listbars">
             <ul>
-            <li><a href="./register.html">HOME</a></li>
-            <li><a href="./register.css">VENUE</a></li>
-            <li><a href="./register.js">REGISTER</a></li>
+            <li><a href="./home.html">HOME</a></li>
+            <li><a href="./venue.html">VENUE</a></li>
+            <li><a href="./register.html">REGISTER</a></li>
           </ul>
         </nav>
       </header>
@@ -72,12 +72,12 @@
           <p class="copy">&copy; Styles Conference</p>
           <nav class="links">
           <ul>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/home-branch/index.html">Home</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/venue-branch/index.html">Venue</a></li>
-            <li><a href="https://raw.githack.com/auwalisa36/Conference-page_Auwal-Isa_and_Olukowajo-Funmilola-Esther/register-branch/index.html">Register</a></li>
+            <li><a href="./home.html">Home</a></li>
+            <li><a href="./venue.html">Venue</a></li>
+            <li><a href="./register.html">Register</a></li>
           </ul>
         </nav>
         </footer>
-<script src="script.js"></script>
+<script src="./assets/js/register.js"></script>
 </body>
 </html>
